Increase content width to avoid shifting of items upon expansion

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,8 @@ body {
 #content {
     /* font-size: 2rem; */
     font-family: arial;
+    position: relative;
+    width: 40%;
 }
 
 .itemInfo {
